overflow corrected

--- a/css/events.css
+++ b/css/events.css
@@ -5,7 +5,8 @@
 }
 
 #events-section .mainhead h1 {
-  margin-left: 11%;
+  /* margin-left: 11%; */
+  text-align: center;
   font-size: 4rem;
   margin-bottom: 80px;
   font-weight: bold;
@@ -76,7 +77,7 @@
     position: relative;
     border: none;
     overflow: hidden;
-    margin-top: 5px;
+    margin-top: 10px;
     cursor: pointer;
   }
   #events-section .contain .card-short {
