--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -227,7 +227,6 @@
     position: absolute;
     top: 80px;
     left: 40px;
-    /* bottom: 1000px; */
     height: 65%;
     width: 50%;
   }
@@ -274,7 +273,6 @@
   #frontpage .main-logo {
     position: absolute;
     top: 100px;
-    /* bottom: 1000px; */
     height: 55%;
     width: 52%;
   }
@@ -289,7 +287,7 @@
     display: flex;
     font-size: 3rem;
     font-weight: bold;
-    margin-top: 20px;
+    margin-top: 60px;
   }
 
   #frontpage .main-content {
